fix(api): deserialise retrieveAll as the concrete entity type
VaultClient.retrieveAll described its response as
ParameterizedTypeReference<List<T>>, but T is erased at that point, so Jackson
was handed the abstract BaseEntity and refused it with "no Creators, like
default constructor, exist".

Every caller died on it. That includes DBMintVault.load(archive), which is the
call every mint makes to read its keysets, so no mint could run vault-backed at
all: it failed at startup before serving a request.

The client already holds the concrete entityType, and an array of it survives
erasure, so the response is requested as T[] and wrapped. The sibling clients
(KeySet/Key/Proof) name concrete types in their own ParameterizedTypeReferences
and were never affected.

The test drives a real RestTemplate through MockRestServiceServer against the
body the running vault actually returns for GET /vault/mint, so it reproduces
the production failure rather than asserting the shape of a mock.